# power-plan-ai

./: .claudeignore  .gitignore  CLAUDE.md  README.md  database.py  main.py  note_article.md  power_manager.py  pyproject.toml  skills_section.tmp  startup_manager.py
.claude/: settings.json
.claude/rules/: Documentationwriting.md  TypeScript.md  ai-api.md  api-designer.md  build-workflow.md  chrome-extension.md  claude-mem.md  code-review.md  core-rules.md  cpp.md  design-guidelines.md  electron.md  git-workflow.md  language-selection.md  mcp-server.md  nextjs-hono.md  note-writing.md  performance.md  python.md  react.md  refactoring.md  security-audit.md  testing.md  version-management.md  windows-app.md
mnt/skills/: README.md  build.md  bun-build.md  bun-init.md  bun-install.md  bun-run.md  bun-test.md  bun.md  check.md  clean.md  commit.md  deploy.md  format.md  init.md  note.md  optimize.md  quickfix.md  release.md  review.md  scaffold.md  test.md  testgen.md
src/: __init__.py  main.py  pattern_learner.py  power_manager.py  system_monitor.py
src/ui/: dashboard.py  tray_icon.py
ui/: __init__.py  dashboard.py  tray_icon.py
