[project]
name = "power-plan-ai"
version = "1.1.0"
description = "Windows電源プランAI最適化アプリ"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "psutil>=5.9.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pywin32>=306",
]

[project.scripts]
power-plan-ai = "src.main:main"

[tool.pyinstaller]
name = "PowerPlanAI"
onefile = true
windowed = true
icon = "assets/icon.ico"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
